fixed styles in text editor not always visible + refactored dialog visibility

--- a/packages/silex-lib/src/css/ace-editor.less
+++ b/packages/silex-lib/src/css/ace-editor.less
@@ -2,7 +2,6 @@
   position: absolute;
   width: 90%;
   height: 90%;
-  display: none;
   z-index: 110;
   .close-btn {
     background-image: url("../assets/goog-ui/close.png");
